<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/photosFragment">

    <fragment
        android:id="@+id/photosFragment"
        android:name="com.gxstar.stargallery.ui.photos.PhotosFragment"
        android:label="@string/photos_title">
        <action
            android:id="@+id/action_photosFragment_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_photosFragment_to_trashFragment"
            app:destination="@id/trashFragment" />
        <action
            android:id="@+id/action_photosFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/albumsFragment"
        android:name="com.gxstar.stargallery.ui.albums.AlbumsFragment"
        android:label="@string/albums_title">
        <action
            android:id="@+id/action_albumsFragment_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/photoDetailFragment"
        android:name="com.gxstar.stargallery.ui.detail.PhotoDetailFragment"
        android:label="Photo Detail">
        <argument
            android:name="initialPhoto"
            app:argType="com.gxstar.stargallery.data.model.Photo"
            app:nullable="true" />
        <argument
            android:name="photoId"
            app:argType="long" />
        <argument
            android:name="sortType"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="bucketId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/albumDetailFragment"
        android:name="com.gxstar.stargallery.ui.albums.AlbumDetailFragment"
        android:label="Album Detail">
        <argument
            android:name="bucketId"
            app:argType="long" />
        <argument
            android:name="albumName"
            app:argType="string" />
        <action
            android:id="@+id/action_albumDetailFragment_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/trashFragment"
        android:name="com.gxstar.stargallery.ui.trash.TrashFragment"
        android:label="@string/trash_title" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.gxstar.stargallery.ui.about.AboutFragment"
        android:label="@string/about">
        <action
            android:id="@+id/action_aboutFragment_to_privacyPolicyFragment"
            app:destination="@id/privacyPolicyFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_aboutFragment_to_permissionsFragment"
            app:destination="@id/permissionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_aboutFragment_to_thirdPartyLibrariesFragment"
            app:destination="@id/thirdPartyLibrariesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_aboutFragment_to_contactFragment"
            app:destination="@id/contactFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_aboutFragment_to_licenseFragment"
            app:destination="@id/licenseFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/privacyPolicyFragment"
        android:name="com.gxstar.stargallery.ui.about.PrivacyPolicyFragment"
        android:label="@string/privacy_policy" />

    <fragment
        android:id="@+id/permissionsFragment"
        android:name="com.gxstar.stargallery.ui.about.PermissionsFragment"
        android:label="@string/permissions_title" />

    <fragment
        android:id="@+id/thirdPartyLibrariesFragment"
        android:name="com.gxstar.stargallery.ui.about.ThirdPartyLibrariesFragment"
        android:label="@string/third_party_title" />

    <fragment
        android:id="@+id/contactFragment"
        android:name="com.gxstar.stargallery.ui.about.ContactFragment"
        android:label="@string/contact_title" />

    <fragment
        android:id="@+id/licenseFragment"
        android:name="com.gxstar.stargallery.ui.about.LicenseFragment"
        android:label="@string/open_source_license" />

</navigation>
